--- a/resume.html
+++ b/resume.html
@@ -14,6 +14,7 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="projects.html">Projects</a></li>
+      <li><a href="labs.html">Labs</a></li>
       <li><a href="writeups.html">Writeups</a></li>
       <li><a class="active" href="resume.html">Resume</a></li>
     </ul>
@@ -34,9 +35,12 @@
   <a class="btn" href="docs/Moulton - Original Resume.docx">
     Download Resume (Word)
   </a>
-  <a class="btn secondary" href="docs/Moulton - Resume.pdf">
-    View Resume (PDF)
-  </a>
+  <a class="btn secondary"
+   href="docs/Moulton - Resume.pdf"
+   target="_blank"
+   rel="noopener">
+  View Resume (PDF)
+</a>
 </div>
       </div>
 
