--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <section class="section">
     <h2>Featured Project</h2>
     <div class="panel">
-      <h3>Ethical Hacking Term Project — AES Analysis & Decryption Workflow</h3>
+      <h3>Ethical Hacking Project — AES Analysis & Decryption Workflow</h3>
       <p class="lead">
         Built a milestone-based workflow to identify an AES encryption key, decrypt a protected
         message, and interpret the recovered plaintext.
