--- a/resume.html
+++ b/resume.html
@@ -49,6 +49,7 @@
         <div class="kv">
           <div>Email</div><div><a href="mailto:YOUR_EMAIL">tyfannam@gmail.com</a></div>
           <div>LinkedIn</div><div>https://www.linkedin.com/in/t-moulton/</div>
+          <div>GitHub</div><div>https://github.com/tmoulton-cyber</div>
         </div>
       </div>
     </div>
