--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <section class="hero">
     <div class="hero-card">
       <!-- Update filename if needed -->
-      <img class="profile" src="images/profile.jpg" alt="Tyfanna Moulton headshot"/>
+      <img class="profile" src="images/Moulton_Tyfanna_323-0731 Low Resolution -Retouched.jpg" alt="Tyfanna Moulton headshot"/>
 
       <div>
         <h1>Cybersecurity Portfolio</h1>
