--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
       <li><a href="about.html">About</a></li>
       <li><a href="projects.html">Projects</a></li>
       <li><a href="labs.html">Labs</a></li>
-      <li><a href="writeups.html">Writeups</a></li>
       <li><a href="resume.html">Resume</a></li>
     </ul>
   </div>
@@ -93,20 +92,12 @@
       <div class="card">
         <h3>Labs</h3>
         <p>
-          Hands-on coursework across forensics, networking, operating systems,
-          and database systems.
+          Hands-on programming and cybersecurity labs focused on building
+          foundational technical skills through practical exercises.
         </p>
         <a href="labs.html">Explore Labs →</a>
       </div>
 
-      <div class="card">
-        <h3>Writeups</h3>
-        <p>
-          Short explanations of lessons learned, security concepts,
-          and practical takeaways from labs and projects.
-        </p>
-        <a href="writeups.html">Read Writeups →</a>
-      </div>
     </div>
   </section>
 
