--- a/labs.html
+++ b/labs.html
@@ -16,7 +16,6 @@
       <li><a href="about.html">About</a></li>
       <li><a href="projects.html">Projects</a></li>
       <li><a class="active" href="labs.html">Labs</a></li>
-      <li><a href="writeups.html">Writeups</a></li>
       <li><a href="resume.html">Resume</a></li>
     </ul>
   </div>
@@ -34,6 +33,31 @@
 
 <div class="grid">
 
+  <div class="card">
+  <h3>Java Array Search</h3>
+  <p>
+    Implemented a basic search algorithm in Java to validate user input
+    and detect target values within a dataset.
+  </p>
+  <a href="https://github.com/tmoulton-cyber/java-array-search"
+     target="_blank" rel="noopener">
+    View Code
+  </a>
+</div>
+
+<div class="card">
+  <h3>Java Bubble Sort + Binary Search</h3>
+  <p>
+    Implemented Bubble Sort and Binary Search in Java to demonstrate efficient
+    searching, algorithm fundamentals, and traceable logic.
+  </p>
+  <a href="https://github.com/tmoulton-cyber/java-bubble-sort-binary-search"
+     target="_blank" rel="noopener">
+    View Code
+  </a>
+</div>
+
+  
   <div class="card">
     <h3>NTFS & MFT Analysis</h3>
     <p>Analyzed Windows file system artifacts to understand file activity and timelines.</p>
