--- a/resume.html
+++ b/resume.html
@@ -47,8 +47,24 @@
         <h3>Contact</h3>
         <div class="kv">
           <div>Email</div><div><a href="mailto:YOUR_EMAIL">tyfannam@gmail.com</a></div>
-          <div>LinkedIn</div><div>https://www.linkedin.com/in/t-moulton/</div>
-          <div>GitHub</div><div>https://github.com/tmoulton-cyber</div>
+          <div>LinkedIn</div>
+          <div>
+            <a href="https://www.linkedin.com/in/t-moulton/"
+            target="_blank"
+            rel="noopener">
+            linkedin.com/in/t-moulton
+          </a>
+        </div>
+        <div>GitHub</div>
+        <div>
+          <a href="https://github.com/tmoulton-cyber"
+          target="_blank"
+          rel="noopener">
+          github.com/tmoulton-cyber
+        </a>
+      </div>
+
+
         </div>
       </div>
     </div>
